<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ui.sig_in_Fragments.Sign_in_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.99" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/laypas"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:hint="@string/enter_your_password"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error"
            app:helperText="Required*"

            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/your_login"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/your_password"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/laylogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/laylogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_your_login"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error"
            app:helperText="Required*"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enter"
            android:layout_width="351dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/green"
            android:text="@string/enter"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laypas" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="36dp"
            android:text="@string/not_registered"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>